fix: image overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,7 +39,7 @@
 
 body {
   font-family: 'Lan';
-  @apply h-full portrait:h-[130vh] ;
+  @apply portrait:h-[130vh] landscape:overflow-hidden;
   /* @apply overflow-x-hidden landscape:overflow-hidden; */
 }
 
